--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html{>
+<html>
     <head>
         <link rel=stylesheet type=text/css href="css/style.css">
         <script type=text/javascript src="js/jquery-1.7.2.js"></script>
