Rename class green to playing

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </table>
     </div>
     <div class="games">
-        <input type="radio" value="alone" id="alone" name="game"/><label for="alone">Alone</label><br/>
+        <input type="radio" tabindex="1" value="alone" id="alone" name="game"/><label for="alone">Alone</label><br/>
         <input type="radio" value="withtwo" id="withtwo" name="game"/><label for="withtwo">With two</label><br/>
         <input type="radio" value="arbendance" id="arbendance" name="game"/><label for="arbendance">Arbendance</label><br/>
         <input type="radio" value="trul" id="trul" name="game"/><label for="trul">Trul</label><br/>
@@ -40,8 +40,8 @@
         <input type="radio" value="soloslim" id="soloslim" name="game"/><label for="soloslim">Soloslim</label><br/>
     </div>
     <div class="tricks">
-        <input type="checkbox" id="dbl"></input>
-        <input id="tricks"></input>
+        <input alt="Double" type="checkbox" tabindex="2" id="dbl"></input>
+        <input id="tricks" tabindex="3" placeholder="Tricks"></input>
     </div>
 </body>
 </html>
