Add graph to display play history

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <html>
     <head>
         <link rel=stylesheet type=text/css href="css/style.css">
+        <link rel="stylesheet" type="text/css" href="ext/css/jquery.jqplot.min.css">
         <script type=text/javascript src="js/jquery-1.7.2.js"></script>
         <script type=text/javascript src="js/wiezen.js"></script>
+        <script type=text/javascript src="ext/js/jquery.jqplot.min.js"></script>
         <title>Whist Scores</title>
     </head>
 <body>
@@ -42,6 +44,11 @@
     <div class="tricks">
         <input alt="Double" type="checkbox" tabindex="2" id="dbl"></input>
         <input id="tricks" tabindex="3" placeholder="Tricks"></input>
+    </div>
+    <br/><br/><br/><br/><br/><br/>
+    <br/><br/><br/><br/><br/><br/>
+    <div id="charts">
+        <div id="chart"/>
     </div>
 </body>
 </html>
