Some cosmetic changes

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <title>Whist Scores</title>
     </head>
 <body>
-    <div class="scores">
+    <div class="tblgrid gradients scores">
         <table class="scorestbl">
             <tr>
                 <th>Name</th>
@@ -32,7 +32,7 @@
             </tr>
         </table>
     </div>
-    <div class="games">
+    <div class="tblgrid gradients games">
         <input type="radio" tabindex="1" value="alone" id="alone" name="game"/><label for="alone">Alone</label><br/>
         <input type="radio" value="withtwo" id="withtwo" name="game"/><label for="withtwo">With two</label><br/>
         <input type="radio" value="arbendance" id="arbendance" name="game"/><label for="arbendance">Arbendance</label><br/>
@@ -41,12 +41,12 @@
         <input type="radio" value="miserietable" id="miserietable" name="game"/><label for="miserietable">Miserie on the table</label><br/>
         <input type="radio" value="soloslim" id="soloslim" name="game"/><label for="soloslim">Soloslim</label><br/>
     </div>
-    <div class="tricks">
+    <div class="clr"></div>
+    <div class="tricks gradients">
         <input alt="Double" type="checkbox" tabindex="2" id="dbl"></input>
         <input id="tricks" tabindex="3" placeholder="Tricks"></input>
     </div>
-    <br/><br/><br/><br/><br/><br/>
-    <br/><br/><br/><br/><br/><br/>
+    <div class="clr"></div>
     <div id="charts">
         <div id="chart"/>
     </div>
