Add support for undo and saving state of a game

--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
     </div>
     <div class="clr"></div>
     <div class="tricks gradients">
-        <input alt="Double" type="checkbox" tabindex="2" id="dbl"></input>
-        <input id="tricks" tabindex="3" placeholder="Tricks"></input>
+        <label>Double</label>&nbsp;<input alt="Double" type="checkbox" tabindex="2" id="dbl"></input><br/>
+        <label>Tricks</label>&nbsp;<input id="tricks" tabindex="3" placeholder="Tricks"></input><button id="submit">Enter</button><br/>
+        <button id="undo">Undo</button>
     </div>
     <div class="clr"></div>
     <div id="charts">
