--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <script type=text/javascript src="js/jquery-1.7.2.js"></script>
         <script type=text/javascript src="js/wiezen.js"></script>
         <script type=text/javascript src="ext/js/jquery.jqplot.min.js"></script>
+        <script type=text/javascript src="ext/js/jqplot.pointLabels.min.js"></script>
         <title>Whist Scores</title>
     </head>
 <body>
