Make tricks input as number + allow delete

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="clr"></div>
     <div class="tricks gradients">
         <label>Double</label>&nbsp;<input alt="Double" type="checkbox" tabindex="2" id="dbl"></input><br/>
-        <label>Tricks</label>&nbsp;<input id="tricks" tabindex="3" placeholder="Tricks"></input><button id="submit">Enter</button><br/>
+        <label>Tricks</label>&nbsp;<input id="tricks" tabindex="3" type="number" min="0" max="13" placeholder="Tricks"></input><button id="submit">Enter</button><br/>
         <button id="undo">Undo</button>
     </div>
     <div class="clr"></div>
